# ln-manager

./: .dockerignore  .gitignore  Dockerfile.combined  ReadMe.md  docker-compose.yml
backend/: ReadMe.md  main.py  plugin_manager.py  pyproject.toml  requirements.txt
backend/api/v1/: core.py  download_clients.py  indexers.py  metadata.py  parsers.py  plugins.py  system.py  utils.py
backend/app/: main.py
backend/core/: backup.py  config.py  constants.py  exceptions.py  logging_config.py  notifications.py  orchestrator.py  scheduler.py
backend/core/database/: database.py  models.py
backend/core/plugins/: base.py  download_client.py  generic.py  indexer.py  metadata.py  parser.py
backend/core/services/: download_client_service.py  indexer_service.py  library_service.py  metadata_service.py  parser.py  parser_service.py
backend/core/services/pipeline/: automated_pipe.py  pipe.py  stage.py
backend/plugins/AutomatedPipeline/: AutomatedPipePlugin.py  automated_pipe.py  manifest.yaml
backend/plugins/RanobeDB/: manifest.yaml  ranobedb.py  ranobedb_api.py  rate_limiter.py
docker/: entrypoint.sh
frontend/: ReadMe.md  index.html  package-lock.json  package.json  postcss.config.cjs  vite.config.ts
frontend/src/: App.tsx  main.tsx  plugin-manifests.ts
frontend/src/@types/: layout.ts
frontend/src/api/: ApiResponse.ts  api.ts  websocket_api.ts
frontend/src/auth/: AuthProvider.tsx
frontend/src/components/: AddIndexerModal.tsx  AddSeriesModal.tsx  BookInfo.tsx  FileUploadModal.tsx  IndexerConfigModal.tsx  ReleasesTable.tsx  SearchBar.tsx  SeriesHeader.tsx  (+2 more)
(+47 files in other folders)
